 <LinearLayout      
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@color/MaCouleurDeFond"
    tools:context=".MainActivity" 
    android:id="@+id/LinearLayout1"
    android:orientation="vertical" >
    <TextView
        android:id="@+id/textView1"
        android:textSize="22sp"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtAccueil" />
    <LinearLayout
         android:layout_width="match_parent"
		 android:layout_height="wrap_content"
		 android:gravity="center_vertical"
		 android:layout_marginTop="10dp"
		 android:layout_marginBottom="10dp" >
 	 <TextView
         android:id="@+id/TextViewTitreMotSource"
         android:layout_width="wrap_content"
          android:textSize="20sp"
          android:textColor="@color/MaCouleurPreferee"
         android:layout_height="wrap_content"
         android:text="@string/txt_Titre1" />
 	</LinearLayout> 
 	 <LinearLayout
         android:layout_width="match_parent"
		 android:layout_height="wrap_content"
		 android:gravity="center"
		 android:orientation="vertical" >
	<EditText
          android:id="@+id/mot_edittext"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/txt_enter_your_mot"
          android:inputType="text"
          android:maxLines="1"
          android:text="@string/txt_motSource" />
	<Button
	    android:id="@+id/buttonTraduire"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:layout_marginTop="20dp"
	    android:text="@string/btnTraduire" />
	<Button
	    android:id="@+id/buttonReconnaitre"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:layout_marginTop="20dp"
	    android:text="@string/btnReconnaitre" />
 	</LinearLayout> 
    </LinearLayout> 